# final

./: .gitignore  MCTS_vs_Minimax_Analysis.md  MINIMAX_PERFORMANCE_ANALYSIS.md  Overview.md  README.md  pyproject.toml  requirements.txt
docs/: FINDINGS.md  README.md  RESEARCH.md  RESULTS.md
examples/: demo.py  greedy_self_play.py  greedy_vs_random.py  match_runner.py  random_self_play.py
experiments/: analyze_results.py  profile_mcts.py  run_experiments.py  run_final_experiments.py  run_high_mcts.py  run_ultra_mcts.py  visualize_results.py
experiments/results/: experiment_results.csv  experiment_results.json  final_results_20251207_185428.csv  final_results_20251207_185428.json  final_results_20251208_191817.csv  final_results_20251208_191817.json
src/minichess/: __init__.py  evaluation.py  game.py
src/minichess/agents/: __init__.py  base.py  greedy_agent.py  mcts_agent.py  minimax_agent.py  random_agent.py
src/minichess_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_mcts_agent.py  test_minimax_agent.py  test_smoke.py
